Apply JUL Api Changes regarding the generic declaration of conncetion observer. Remove deprecated api. Fix further generics.